[package]
name = "prompt-enhancer-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
async-trait = "0.1.89"
enigo = "0.1"
global-hotkey = "0.7.0"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
winit = { version = "0.30.13", features = ["rwh_06"] }
